--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,86 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    package="ua.kpi.ecampus"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="ua.kpi.ecampus">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.INTERNET"/>
 
-    <application
-        android:name="ua.kpi.ecampus.CampusApplication"
-        android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher_dark"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+  <application
+      android:name=".CampusApplication"
+      android:allowBackup="false"
+      android:icon="@mipmap/ic_launcher_dark"
+      android:label="@string/app_name"
+      android:supportsRtl="true"
+      android:theme="@style/AppTheme">
+    <activity
+        android:name=".ui.activity.MainNotAuthActivity"
+        android:theme="@style/AppTheme.NoActionBar"/>
+    <activity
+        android:name=".ui.activity.LoginActivity"
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme.Dark"
+        android:windowSoftInputMode="stateHidden"/>
+    <activity
+        android:name=".ui.activity.MainActivity"
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme.NoActionBar">
+    </activity>
+    <activity
+        android:name=".ui.activity.BulletinBoardActivity"
+        android:parentActivityName=".ui.activity.MainActivity"
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme.NoActionBar"/>
+    <activity
+        android:name=".ui.activity.BulletinContentActivity"
+        android:parentActivityName=".ui.activity.BulletinBoardActivity"
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme.NoActionBar"/>
 
-        <activity
-            android:name="ua.kpi.ecampus.ui.activity.MainNotAuthActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+    <provider
+        android:name=".database.ApiContentProvider"
+        android:authorities="ua.kpi.ecampus.database.contentprovider"
+        android:exported="false"/>
 
-        <activity
-            android:name="ua.kpi.ecampus.ui.activity.LoginActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.Dark"
-            android:windowSoftInputMode="stateHidden"/>
+    <activity
+        android:name=".ui.activity.AddBulletinActivity"
+        android:parentActivityName=".ui.activity.BulletinBoardModeratorActivity"
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme.NoActionBar"
+        android:windowSoftInputMode="stateHidden"/>
+    <activity
+        android:name=".ui.activity.BulletinBoardModeratorActivity"
+        android:parentActivityName=".ui.activity.BulletinBoardActivity"
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme.NoActionBar"/>
+    <activity
+        android:name=".ui.activity.EditBulletinActivity"
+        android:parentActivityName=".ui.activity.BulletinBoardModeratorActivity"
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme.NoActionBar"
+        android:windowSoftInputMode="stateHidden"/>
+    <activity
+        android:name=".ui.activity.VotingStudentActivity"
+        android:parentActivityName=".ui.activity.MainActivity"
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme.NoActionBar">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
 
-        <activity
-            android:name="ua.kpi.ecampus.ui.activity.MainActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity>
+    <activity
+        android:name=".ui.activity.RateTeacherActivity"
+        android:parentActivityName=".ui.activity.VotingStudentActivity"
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme.NoActionBar"/>
+    <activity
+        android:name=".ui.activity.ArchiveRatingActivity"
+        android:parentActivityName=".ui.activity.VotingStudentActivity"
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme.NoActionBar">
+    </activity>
+  </application>
 
-        <activity
-            android:name="ua.kpi.ecampus.ui.activity.BulletinBoardActivity"
-            android:parentActivityName="ua.kpi.ecampus.ui.activity.MainActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-        <activity
-            android:name="ua.kpi.ecampus.ui.activity.BulletinContentActivity"
-            android:parentActivityName="ua.kpi.ecampus.ui.activity.BulletinBoardActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-        <provider
-            android:name="ua.kpi.ecampus.database.ApiContentProvider"
-            android:authorities="ua.kpi.ecampus.database.contentprovider"
-            android:exported="false"/>
-
-        <activity
-            android:name="ua.kpi.ecampus.ui.activity.AddBulletinActivity"
-            android:parentActivityName="ua.kpi.ecampus.ui.activity.BulletinBoardModeratorActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden"/>
-
-        <activity
-            android:name="ua.kpi.ecampus.ui.activity.BulletinBoardModeratorActivity"
-            android:parentActivityName="ua.kpi.ecampus.ui.activity.BulletinBoardActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-        <activity
-            android:name="ua.kpi.ecampus.ui.activity.EditBulletinActivity"
-            android:parentActivityName="ua.kpi.ecampus.ui.activity.BulletinBoardModeratorActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden"/>
-
-        <activity
-            android:name="ua.kpi.ecampus.ui.activity.VotingStudentActivity"
-            android:parentActivityName="ua.kpi.ecampus.ui.activity.MainActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-        <activity
-            android:name="ua.kpi.ecampus.ui.activity.RateTeacherActivity"
-            android:parentActivityName="ua.kpi.ecampus.ui.activity.VotingStudentActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-    </application>
 </manifest>
